additional work on the webinterface

--- a/web/src/pug/pages/index.pug
+++ b/web/src/pug/pages/index.pug
@@ -4,3 +4,6 @@ block content
     include ../partials/tabselector.pug
     include ../partials/timeconfig.pug
     include ../partials/dateconfig.pug
+    include ../partials/ledconfig.pug
+    include ../partials/sysconfig.pug
+  include ../partials/fwupdate.pug
