--- a/web/src/pug/partials/dateconfig.pug
+++ b/web/src/pug/partials/dateconfig.pug
@@ -1,48 +1,48 @@
-.dateconfig
-    h2 #{$i18n.timeconfig.title}
-    div #{$i18n.timeconfig.description}
+.contenttab#dateconfig
+    h2 #{$i18n.dateconfig.title}
+    div #{$i18n.dateconfig.description}
 
     fieldset.form-horizontal
         .columns
 
             .column.col-6
-                .h6 #{$i18n.timeconfig.colorconfig.day}
+                .h6 #{$i18n.dateconfig.colorconfig.day}
 
                 .form-group 
                     .col-3
-                        label.form-label(for='hourcolor') #{$i18n.timeconfig.colorconfig.hourhand} 
+                        label.form-label(for='hourcolor') #{$i18n.dateconfig.colorconfig.hourhand} 
                     .col-9
                         input.form-input(type='color', id='hourcolor')
                 
                 .form-group 
                     .col-3
-                        label.form-label(for='minutecolor') #{$i18n.timeconfig.colorconfig.minutehand} 
+                        label.form-label(for='minutecolor') #{$i18n.dateconfig.colorconfig.minutehand} 
                     .col-9
                         input.form-input(type='color', id='minutecolor')
                 
                 .form-group
                     .col-3
-                        label.form-label(for='secondcolor') #{$i18n.timeconfig.colorconfig.secondhand} 
+                        label.form-label(for='secondcolor') #{$i18n.dateconfig.colorconfig.secondhand} 
                     .col-9
                         input.form-input(type='color', id='secondcolor')
 
             .column.col-6
-                .h6 #{$i18n.timeconfig.colorconfig.night}
+                .h6 #{$i18n.dateconfig.colorconfig.night}
 
                 .form-group 
                     .col-3
-                        label.form-label(for='hourcolor') #{$i18n.timeconfig.colorconfig.hourhand} 
+                        label.form-label(for='hourcolor') #{$i18n.dateconfig.colorconfig.hourhand} 
                     .col-9
                         input.form-input(type='color', id='hourcolor')
                 
                 .form-group 
                     .col-3
-                        label.form-label(for='minutecolor') #{$i18n.timeconfig.colorconfig.minutehand} 
+                        label.form-label(for='minutecolor') #{$i18n.dateconfig.colorconfig.minutehand} 
                     .col-9
                         input.form-input(type='color', id='minutecolor')
                 
                 .form-group
                     .col-3
-                        label.form-label(for='secondcolor') #{$i18n.timeconfig.colorconfig.secondhand} 
+                        label.form-label(for='secondcolor') #{$i18n.dateconfig.colorconfig.secondhand} 
                     .col-9
                         input.form-input(type='color', id='secondcolor')
