--- a/web/src/pug/partials/tabselector.pug
+++ b/web/src/pug/partials/tabselector.pug
@@ -1,9 +1,9 @@
 ul.tab.tab-block
-    li.tab-item.active
+    li.tab-item.active#timeconfig-tab
         a(href="#timeconfig") #{$i18n.nav.timeconfig}
-    li.tab-item
+    li.tab-item#dateconfig-tab
         a(href="#dateconfig") #{$i18n.nav.dateconfig}
-    li.tab-item
+    li.tab-item#ledconfig-tab
         a(href="#ledconfig") #{$i18n.nav.ledconfig}
-    li.tab-item
+    li.tab-item#sysconfig-tab
         a(href="#sysconfig") #{$i18n.nav.sysconfig}
