switch to gulp html i18n

--- a/web/src/pug/pages/index.pug
+++ b/web/src/pug/pages/index.pug
@@ -7,3 +7,5 @@ block content
     include ../partials/ledconfig.pug
     include ../partials/sysconfig.pug
   include ../partials/fwupdate.pug
+  include ../partials/reset.pug
+  include ../partials/ledorder.pug
