--- a/web/src/pug/base/base.pug
+++ b/web/src/pug/base/base.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
-    title #{$i18n.title} 
+    title ${{ index.title }}$ 
     link(href="./assets/css/styles.min.css", rel="stylesheet")
   body
     .container.grid-sm
