--- a/web/src/pug/partials/dateconfig.pug
+++ b/web/src/pug/partials/dateconfig.pug
@@ -1,48 +1,48 @@
 .contenttab#dateconfig
-    h2 #{$i18n.dateconfig.title}
-    div #{$i18n.dateconfig.description}
+    h2 ${{ index.dateconfig.title }}$
+    div ${{ index.dateconfig.description }}$
 
     fieldset.form-horizontal
         .columns
 
             .column.col-6
-                .h6 #{$i18n.dateconfig.colorconfig.day}
+                .h6 ${{ index.dateconfig.colorconfig.day }}$
 
                 .form-group 
                     .col-3
-                        label.form-label(for='hourcolor') #{$i18n.dateconfig.colorconfig.hourhand} 
+                        label.form-label(for='hourcolor') ${{ index.dateconfig.colorconfig.hourhand }}$ 
                     .col-9
                         input.form-input(type='color', id='hourcolor')
                 
                 .form-group 
                     .col-3
-                        label.form-label(for='minutecolor') #{$i18n.dateconfig.colorconfig.minutehand} 
+                        label.form-label(for='minutecolor') ${{ index.dateconfig.colorconfig.minutehand }}$ 
                     .col-9
                         input.form-input(type='color', id='minutecolor')
                 
                 .form-group
                     .col-3
-                        label.form-label(for='secondcolor') #{$i18n.dateconfig.colorconfig.secondhand} 
+                        label.form-label(for='secondcolor') ${{ index.dateconfig.colorconfig.secondhand }}$ 
                     .col-9
                         input.form-input(type='color', id='secondcolor')
 
             .column.col-6
-                .h6 #{$i18n.dateconfig.colorconfig.night}
+                .h6 ${{ index.dateconfig.colorconfig.night }}$
 
                 .form-group 
                     .col-3
-                        label.form-label(for='hourcolor') #{$i18n.dateconfig.colorconfig.hourhand} 
+                        label.form-label(for='hourcolor') ${{ index.dateconfig.colorconfig.hourhand }}$ 
                     .col-9
                         input.form-input(type='color', id='hourcolor')
                 
                 .form-group 
                     .col-3
-                        label.form-label(for='minutecolor') #{$i18n.dateconfig.colorconfig.minutehand} 
+                        label.form-label(for='minutecolor') ${{ index.dateconfig.colorconfig.minutehand }}$ 
                     .col-9
                         input.form-input(type='color', id='minutecolor')
                 
                 .form-group
                     .col-3
-                        label.form-label(for='secondcolor') #{$i18n.dateconfig.colorconfig.secondhand} 
+                        label.form-label(for='secondcolor') ${{ index.dateconfig.colorconfig.secondhand }}$ 
                     .col-9
                         input.form-input(type='color', id='secondcolor')
