--- a/web/src/pug/partials/header.pug
+++ b/web/src/pug/partials/header.pug
@@ -3,6 +3,6 @@
 header.navbar.col-12.p-sticky
     section.navbar-section
     section.navbar-section
-        button.btn.btn-lg.btn-primary.input-group-btn.my-2 #{$i18n.savebutton}
+        button.btn.btn-lg.btn-primary.input-group-btn.my-2 ${{ index.savebutton }}$
 
-p #{$i18n.description}
+p ${{ index.description }}$
