--- a/web/src/pug/partials/sysconfig.pug
+++ b/web/src/pug/partials/sysconfig.pug
@@ -1,46 +1,46 @@
 .contenttab#sysconfig
-    h2 #{$i18n.sysconfig.title}
-    div #{$i18n.sysconfig.description}
+    h2 ${{ index.sysconfig.title }}$
+    div ${{ index.sysconfig.description }}$
 
     fieldset.form-horizontal
 
-        div #{$i18n.sysconfig.model.description}
+        div ${{ index.sysconfig.model.description }}$
         .form-group
             label.form-radio.form-inline
-                input(type='radio', name='model', checked, value=`${i18n.sysconfig.model.basicclock}`)
+                input(type='radio', name='model', checked, value='${{i18n.sysconfig.model.basicclock }}$')
             label.form-radio.form-inline
-                //- input(type='radio', name='model', checked) #{$i18n.sysconfig.model.dateclock}
+                //- input(type='radio', name='model', checked) ${{ index.sysconfig.model.dateclock }}$
     fieldset.form-horizontal
 
         .form-group
             .col-2
-                label.form-label(for='ledpin') #{$i18n.sysconfig.ledpin} 
+                label.form-label(for='ledpin') ${{ index.sysconfig.ledpin }}$ 
             .col-3
                 input.form-input(type='number', min='1', step='1', id='ledpin')
         
         .form-group
 
             .col-2
-                label.form-label(for='ledcount') #{$i18n.sysconfig.ledcount} 
+                label.form-label(for='ledcount') ${{ index.sysconfig.ledcount }}$ 
             .col-3
                 input.form-input(type='number', min='1', step='1', id='ledcount')
     
     .divider
       
     fieldset.form-horizontal
-        .h6 #{$i18n.sysconfig.network.description}
+        .h6 ${{ index.sysconfig.network.description }}$
 
         .form-group
             .col-3
-                label.form-label(for='timeserver') #{$i18n.sysconfig.network.timeserver} 
+                label.form-label(for='timeserver') ${{ index.sysconfig.network.timeserver }}$ 
             .col-9
-                input.form-input(pattern='^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$', maxlength='64', size='64', required, id='timeserver')
+                input.form-input(pattern='^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61 }}$[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6 }}$$', maxlength='64', size='64', required, id='timeserver')
         
         .form-group
             .col-3
-                label.form-label(for='timeserver') #{$i18n.sysconfig.network.hostname} 
+                label.form-label(for='timeserver') ${{ index.sysconfig.network.hostname }}$ 
             .col-9
-                input.form-input(pattern='^[a-zA-Z][a-zA-Z0-9-_\.]{1,64}$', maxlength='64', size='64', required, id='timeserver')
+                input.form-input(pattern='^[a-zA-Z][a-zA-Z0-9-_\.]{1,64 }}$$', maxlength='64', size='64', required, id='timeserver')
     
     .divider
 
@@ -48,7 +48,7 @@
 
         .form-group
             .col-2
-                label.form-label(for='timezone') #{$i18n.sysconfig.timezone} 
+                label.form-label(for='timezone') ${{ index.sysconfig.timezone }}$ 
             .col-10
                 select.form-input(id='timezone')
 
@@ -58,7 +58,7 @@
 
         .form-group
             .col-12
-                button.btn.btn-lg.modal-firmware-toggle(onclick='return false;') #{$i18n.sysconfig.firmware.open}
+                button.btn.btn-lg.modal-firmware-toggle(onclick='return false;') ${{ index.sysconfig.firmware.open }}$
 
     .divider
 
@@ -66,7 +66,7 @@
 
         .form-group
             .col-12
-                button.btn.btn-lg.modal-reset-toggle(onclick='return false;')  #{$i18n.sysconfig.reset.open}
+                button.btn.btn-lg.modal-reset-toggle(onclick='return false;')  ${{ index.sysconfig.reset.open }}$
 
 
 
