--- a/web/src/sass/styles.scss
+++ b/web/src/sass/styles.scss
@@ -1,4 +1,5 @@
 @import "spectre/spectre";
+@import "spectre/spectre-icons";
 @import "pickr";
 @import "_tabs";
 
@@ -9,4 +10,16 @@ header.p-sticky {
 
 .contenttab {
     display: none;
+}
+
+#ledorder {
+    ul {
+        margin-left: 0;
+
+        li {
+            list-style-type: none;
+            border: $border-width solid $border-color;
+            border-radius: $border-radius;
+        }
+    }
 }
