updates to the web ui

--- a/web/src/pug/pages/index.pug
+++ b/web/src/pug/pages/index.pug
@@ -2,10 +2,8 @@ extends ../layouts/default-layout.pug
 block content
   form.form-horizontal(onsubmit='return false')
     include ../partials/tabselector.pug
+    include ../partials/colorconfig.pug
     include ../partials/timeconfig.pug
-    include ../partials/dateconfig.pug
-    include ../partials/ledconfig.pug
     include ../partials/sysconfig.pug
   include ../partials/fwupdate.pug
   include ../partials/reset.pug
-  include ../partials/ledorder.pug
