--- a/web/src/pug/partials/ledorder.pug
+++ b/web/src/pug/partials/ledorder.pug
@@ -1,42 +1,54 @@
-.h6 LED strip layout
+.divider(rv-if='config.dayMonth')
 
-#led-layout-labels
-    span.chip 1
-    span.chip.float-right(rv-text='config.ledCount')
+.h6(rv-if='config.dayMonth') ${{ index.sysconfig.ledorder.title }}$
+p(rv-if='config.dayMonth') ${{ index.sysconfig.ledorder.description }}$
 
-#led-layout.p-relative.bg-gray
-    .bg-primary.led-layout-block 
-    .bg-success.led-layout-block 
-    .bg-error.led-layout-block 
+#led-layout-labels.columns.mb-1(rv-if='config.dayMonth')
+    .column.col-1
+        span.chip 1
+    .column.col-10
+        .columns.col-gapless.justify-content-center
+            span.chip.col-auto
+                span.avatar.avatar-sm.bg-primary 
+                span ${{ index.sysconfig.ledorder.time }}$
+            span.chip.col-auto 
+                span.avatar.avatar-sm.bg-warning
+                span ${{ index.sysconfig.ledorder.weekday}}$
+            span.chip.col-auto 
+                span.avatar.avatar-sm.bg-success
+                span ${{ index.sysconfig.ledorder.date }}$
+            span.chip.col-auto 
+                span.avatar.avatar-sm.bg-error
+                span ${{ index.sysconfig.ledorder.month }}$
+    .column.col-1
+        span.chip.float-right(rv-text='config.ledCount')
+
+#led-layout.p-relative.bg-gray(rv-baroverflow='watch config.ledCount' rv-if='config.dayMonth')
+    .bg-primary.led-layout-block(rv-barwidth='60 | watch config.ledCount', rv-barpos='1')
+    .bg-warning.led-layout-block(rv-barwidth='7 | watch config.ledCount', rv-barpos='config.weekdayOffset | watch config.ledCount')
+    .bg-success.led-layout-block(rv-barwidth='31 | watch config.ledCount', rv-barpos='config.dayOffset | watch config.ledCount')
+    .bg-error.led-layout-block(rv-barwidth='12 | watch config.ledCount', rv-barpos='config.monthOffset | watch config.ledCount')
         
-
-fieldset.form-horizontal#ledorder
+ 
+fieldset.form-horizontal#ledorder(rv-if='config.dayMonth')
     .form-group
+        .col-2
+            label.form-label(for='weekday-pos-slider') ${{ index.sysconfig.ledorder.weekday }}$
+        .col-9
+            input.col-12.slider.pos-slider.tooltip#weekday-pos-slider(type="range" min="1" rv-max="config.ledCount | sub 6" rv-value='config.weekdayOffset')
         .col-1
-            label.form-label(for='time-pos-slider') ${{ index.ledconfig.order.time }}$
-        .col-10
-            input.col-12.slider.pos-slider.tooltip#time-pos-slider(type="range" min="0" rv-max="config.ledCount" value="1" rv-value='config.timePos')
-        .col-1
-            span.chip.mx-2.slider-chip(rv-text='config.timePos')
+            span.chip.mx-2.slider-chip(rv-text='config.weekdayOffset')
     .form-group
+        .col-2
+            label.form-label(for='date-pos-slider') ${{ index.sysconfig.ledorder.date }}$
+        .col-9
+           input.col-12.slider.pos-slider.tooltip#date-pos-slider(type="range" min="0" rv-max="config.ledCount | sub 30" rv-value='config.dayOffset') 
         .col-1
-            label.form-label(for='weekday-pos-slider') ${{ index.ledconfig.order.weekday }}$
-        .col-10
-            input.col-12.slider.pos-slider.tooltip#weekday-pos-slider(type="range" min="0" max="100" value="50")
-        .col-1
-            span.chip.mx-2.slider-chip(data-bind='config.weekdayPos')
+            span.chip.mx-2.slider-chip(rv-text='config.dayOffset') 
     .form-group
+        .col-2
+            label.form-label(for='month-pos-slider') ${{ index.sysconfig.ledorder.month }}$
+        .col-9
+            input.col-12.slider.pos-slider.tooltip#month-pos-slider(type="range" min="0" rv-max="config.ledCount | sub 11" rv-value='config.monthOffset')
         .col-1
-            label.form-label(for='date-pos-slider') ${{ index.ledconfig.order.date }}$
-        .col-10
-            input.col-12.slider.pos-slider.tooltip#date-pos-slider(type="range" min="0" max="100" value="50")
-        .col-1
-            span.chip.mx-2.slider-chip(data-bind='config.datePos')
-    .form-group
-        .col-1
-            label.form-label(for='month-pos-slider') ${{ index.ledconfig.order.month}}$
-        .col-10
-            input.col-12.slider.pos-slider.tooltip#month-pos-slider(type="range" min="0" max="100" value="50")
-        .col-1
-            span.chip.mx-2.slider-chip(data-bind='config.monthPos')
-
+            span.chip.mx-2.slider-chip(rv-text='config.monthOffset')
