--- a/web/src/pug/partials/reset.pug
+++ b/web/src/pug/partials/reset.pug
@@ -1,16 +1,14 @@
 .modal#modalreset
-    a.modal-overlay.modal-reset-toggle(href='#close', aria-label="Close")
+    a.modal-overlay(href='#close', aria-label="Close" rv-on-click='toggleResetModal')
     .modal-container(role='document')
         .modal-header
-            a.btn.btn-clear.float-right.modal-reset-toggle(href='#close', aria-label="Close")
-            .modal-title.h5 ${{ index.sysconfig.reset.title }}$
+            a.btn.btn-clear.float-right(href='#close', aria-label="Close" rv-on-click='toggleResetModal')
+            .modal-title.h4 ${{ index.sysconfig.reset.title }}$
         .modal-body
             .content
-                div ${{ index.sysconfig.reset.description }}$
+                p ${{ index.sysconfig.reset.description }}$
                     .columns
                         .col-6.column
-                            button.btn.btn-lg.mx-2.modal-reset-toggle ${{ index.sysconfig.reset.cancel }}$
+                            button.btn.btn-lg.modal-reset-toggle ${{ index.sysconfig.reset.cancel }}$
                         .col-6.column
-                            button.btn.btn-error.btn-lg.mx-2 ${{ index.sysconfig.reset.confirm }}$
-        .modal-footer
-            #fwinfo
+                            button.btn.btn-error.btn-lg.float-right ${{ index.sysconfig.reset.confirm }}$
