--- a/web/src/pug/base/base.pug
+++ b/web/src/pug/base/base.pug
@@ -1,13 +1,13 @@
 doctype html
-html(lang="en")
+html(lang="en")#app
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
-    title ${{ index.title }}$ 
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0")
+    title(rv-text='config.hostname | addEmoji "⏰"') ESP-CLOCK
     link(href="./styles.css", rel="stylesheet")
-  body#app
+  body
     .container.grid-sm
       .columns
         block layout
-script(src="./scripts.js")
+    script(src="./scripts.js") 
